finished most pages

--- a/about.html
+++ b/about.html
@@ -56,11 +56,13 @@
             <div class="mid-column-text">
               <h2>What We Do</h2>
               <p>
-                Does a few hours of white water adventure excite you? How about a
-                chance to cliff jump into the river from some of the most scenic parts
-                of the wilderness? If your looking for a memorable river experience
-                you've come to the right place! We have trips suited for all
-                experience and thrill levels.
+                People of all ages are frustrated with not being able to design things online. Graphic
+                Guide gives you the option to come up with an idea of a design you have always
+                wanted and to work one on one with a Designer of your choice to come up with it. With
+                our website we provide you with a choice of Designers of various levels to go and help
+                you design a logo, web graphics, digital art, online advertising, and much more. Basically 
+                whatever design you want or what ever you want photoshopped we can do and teach you how to
+                do it. 
               </p>
             </div>
             <div class="left-column-img">
@@ -73,13 +75,20 @@
           <section class="full-cols">
               <h2>Our Future Plans</h2>
               <p>
-                basic info about the Company
+                My plan is to finally start up a tutorial on how to design what you want
+                online. I want to start up an online course that can teach anyone on how to
+                do things they've never thought they could possibly do. I also want to be able 
+                to help everyone around the world design things they could only dream of doing.
+                
               </p>
           </section>
           <section class="full-cols">
             <h2>Mission</h2>
             <p>
-              basic info about the Company
+                My plans are to be able to get as many designers as I can and help as many people as I can 
+                to design a product they always wanted. I want to be able to teach those same people on how 
+                they will be able to do the same thing they just did later on. My plans is to be able 
+                to teach as many people as I can on how to design there ideal online.
             </p>
           </section>
           <section class="full-cols">
