--- a/index.html
+++ b/index.html
@@ -64,11 +64,13 @@
         <div class="mid-column-text">
           <h2>Goals</h2>
           <p>
-            Does a few hours of white water adventure excite you? How about a
-            chance to cliff jump into the river from some of the most scenic parts
-            of the wilderness? If your looking for a memorable river experience
-            you've come to the right place! We have trips suited for all
-            experience and thrill levels.
+            My goal for this is I want people of all ages no matter their background or
+            finacess to be able to find help they need to design a product they want, and be able to
+            access it easily through online sources. I don't want people to limit themselves on what they
+            can achieve through online. I want people to be able to get what they need and the help that
+            they need to design what they want.
+
+            
           </p>
         </div>
         <div class="left-column-img">
@@ -83,11 +85,12 @@
                 <div class="mid-column-text">
                   <h2>What We've Done</h2>
                   <p>
-                    Does a few hours of white water adventure excite you? How about a
-                    chance to cliff jump into the river from some of the most scenic parts
-                    of the wilderness? If your looking for a memorable river experience
-                    you've come to the right place! We have trips suited for all
-                    experience and thrill levels.
+                    Over the past 10 years we've been active, we have been trying to help as many people 
+                    as we can to design what they've dreamed of making. We have had some bad years, but 
+                    I am confident that we helped many people design what they wanted. These pictures 
+                    we have all over the website are all a few of the designs we made for people. I am 
+                    super proud of what we have accomplished over the years. Our website just keeps growing,
+                    and I am proud of all the support we've received.
                   </p>
                 </div>
               </section>
@@ -102,11 +105,9 @@
         <div class="mid-column-text">
           <h2>What we stand by</h2>
           <p>
-            Does a few hours of white water adventure excite you? How about a
-            chance to cliff jump into the river from some of the most scenic parts
-            of the wilderness? If your looking for a memorable river experience
-            you've come to the right place! We have trips suited for all
-            experience and thrill levels.
+            To be able to help anybody no matter their age, finacess, or background to be able to 
+            design a product they want. I want people to get the help they need to achieve their goals 
+            on an online platform.
           </p>
         </div>
         <div class="left-column-img">
