--- a/subpage-1.html
+++ b/subpage-1.html
@@ -56,11 +56,16 @@
                 <div class="mid-column-text">
                   <h2>About Us</h2>
                   <p>
-                    Does a few hours of white water adventure excite you? How about a
-                    chance to cliff jump into the river from some of the most scenic parts
-                    of the wilderness? If your looking for a memorable river experience
-                    you've come to the right place! We have trips suited for all
-                    experience and thrill levels.
+                    Over the past decade we've been here we had many people get our help.
+                    We have had really bad years, but also we have had fantastic years.
+                    I have enjoyed the long process we've has over the past years to get
+                    to the point we are today. We have helped so many people achieve there 
+                    dreams here. Many people here have had a blast working with us and the 
+                    people here, and here's the statistics of customers and what the average
+                    rating those years were for us. It's been a blast working here and I 
+                    I hope we can continue on what we have been doing here.
+ 
+
                   </p>
                 </div>
                 <div class="left-column-img">
@@ -71,11 +76,7 @@
                 </div>
               </section>
               <section class="full-cols">
-                <h2>Satistics Over the Years</h2>
-                <p>
-                  What I want to show you is how many custormers we've had from when we started
-                  and what overall rating we had that year.
-                </p>
+                <h2>Statistics Over the Years</h2>
             </section>
 
             <div class="flip-card">
