--- a/subpage-2.html
+++ b/subpage-2.html
@@ -72,7 +72,18 @@
             <section class="full-cols">
                 <h2>How We Got Here</h2>
                 <p>
-                  basic info about the Company
+                    Well it's an interesting story. Me and my friend Isaac were just hanging out in my room. 
+                    We've been trying to come up with ideas on what we can do to expand our portfolio, and my 
+                    Mom walked in and asked us to help her come up with a design for her new business. She wanted
+                    a couple designs of some makeup art she can put on her website. So me and Isaac did it because it 
+                    sounded interesting and we needed something to do. Midway through doing this small project for my 
+                    mom, me and Isaac realize that we could start a website dedicated to helping people design 
+                    things that they needed or wanted since not a lot of people are able to do it. After we had finished 
+                    my moms project we were trying to figure out an idea on how we would do it, and how we would get the 
+                    word around. So I asked my mom if she could help us with it and help spread the word around. Soon, many people
+                    were interested in what we were doing and wanted to join in on it. So we let them and now we are here 
+                    because of them and the many people we have helped over the years. 
+
                 </p>
             </section>
         </main>
