--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
             <div class="right-column-img">
                 <img
                   alt="Middle image"
-                  src="https://via.placeholder.com/150"
+                  src="assets\contact\pic_5.png"
                 />
             </div>
             <div class="mid-column-text">
@@ -68,7 +68,7 @@
             <div class="left-column-img">
               <img
                 alt="Middle image"
-                src="https://via.placeholder.com/150"
+                src="assets\contact\pic_6.png"
               />
             </div>
           </section>
@@ -95,7 +95,7 @@
             <div class="full-image">
                 <img
                 alt="Middle image"
-                src="https://via.placeholder.com/1000x200"
+                src="assets\contact\pic_7.png"
               />
             </div>
         </section>
