--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <div id="logo-wrapper">
             <a href="index.html">
-                <img src="assets\contact\logo_real.png" id="logo">
+                <img src="assets\contact\logo_real.png" id="logo" alt="logo">
             </a>
         </div>
         <div class="title">
@@ -57,7 +57,7 @@
       <section class="three-cols">
         <div class="right-column-img">
             <img
-              alt="Middle image"
+              alt="Right Image"
               src="assets\contact\pic_1.png"
             />
         </div>
@@ -75,7 +75,7 @@
         </div>
         <div class="left-column-img">
           <img
-            alt="Middle image"
+            alt="Left image"
             src="assets\contact\pic_3.png"
           />
         </div>
